New classes and logic improvements
* Created Account, AccountManager and TextMessage classes.
* Added new "GetSpecifiedChar" function to input system. This gets player input and returns whether the user put in the specified char.
* Expanded EMenus enum and added a return value to ShowMenu function that's used by the application to keep track of where we are.
* Added ability to create accounts and log into them.

--- a/Messages.vcxproj.filters
+++ b/Messages.vcxproj.filters
@@ -24,6 +24,15 @@
     <ClCompile Include="ConsoleInput.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="AccountManager.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Account.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="TextMessage.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ConsoleUI.h">
@@ -36,6 +45,15 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="ConsoleInput.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="AccountManager.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Account.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="TextMessage.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
