--- a/Messages.vcxproj
+++ b/Messages.vcxproj
@@ -72,19 +72,19 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <OutDir>$(SolutionDir)\Builds\$(Platform)\$(Configuration)\</OutDir>
-    <IntDir>$(SolutionDir)\Builds\$(Platform)\$(Configuration)\Intermediates</IntDir>
+    <IntDir>$(SolutionDir)\Builds\$(Platform)\$(Configuration)\Intermediates\</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <OutDir>$(SolutionDir)\Builds\$(Platform)\$(Configuration)\</OutDir>
-    <IntDir>$(SolutionDir)\Builds\$(Platform)\$(Configuration)\Intermediates</IntDir>
+    <IntDir>$(SolutionDir)\Builds\$(Platform)\$(Configuration)\Intermediates\</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <OutDir>$(SolutionDir)\Builds\$(Platform)\$(Configuration)\</OutDir>
-    <IntDir>$(SolutionDir)\Builds\$(Platform)\$(Configuration)\Intermediates</IntDir>
+    <IntDir>$(SolutionDir)\Builds\$(Platform)\$(Configuration)\Intermediates\</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <OutDir>$(SolutionDir)\Builds\$(Platform)\$(Configuration)\</OutDir>
-    <IntDir>$(SolutionDir)\Builds\$(Platform)\$(Configuration)\Intermediates</IntDir>
+    <IntDir>$(SolutionDir)\Builds\$(Platform)\$(Configuration)\Intermediates\</IntDir>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -151,15 +151,21 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Account.cpp" />
+    <ClCompile Include="AccountManager.cpp" />
     <ClCompile Include="ConsoleInput.cpp" />
     <ClCompile Include="ConsoleUI.cpp" />
     <ClCompile Include="Messages.cpp" />
+    <ClCompile Include="TextMessage.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Account.h" />
+    <ClInclude Include="AccountManager.h" />
     <ClInclude Include="BaseInput.h" />
     <ClInclude Include="BaseUI.h" />
     <ClInclude Include="ConsoleInput.h" />
     <ClInclude Include="ConsoleUI.h" />
+    <ClInclude Include="TextMessage.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
