--- a/Messages.vcxproj
+++ b/Messages.vcxproj
@@ -155,16 +155,21 @@
     <ClCompile Include="AccountManager.cpp" />
     <ClCompile Include="ConsoleInput.cpp" />
     <ClCompile Include="ConsoleUI.cpp" />
+    <ClCompile Include="LoggedIn.cpp" />
+    <ClCompile Include="MainMenu.cpp" />
     <ClCompile Include="Messages.cpp" />
     <ClCompile Include="TextMessage.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Account.h" />
     <ClInclude Include="AccountManager.h" />
+    <ClInclude Include="BaseApplicationState.h" />
     <ClInclude Include="BaseInput.h" />
     <ClInclude Include="BaseUI.h" />
     <ClInclude Include="ConsoleInput.h" />
     <ClInclude Include="ConsoleUI.h" />
+    <ClInclude Include="LoggedIn.h" />
+    <ClInclude Include="MainMenu.h" />
     <ClInclude Include="TextMessage.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
