--- a/Messages.vcxproj.filters
+++ b/Messages.vcxproj.filters
@@ -36,7 +36,10 @@
     <ClCompile Include="MainMenu.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="LoggedIn.cpp">
+    <ClCompile Include="LoggedInMenu.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="AccountsMenu.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -68,7 +71,10 @@
     <ClInclude Include="MainMenu.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="LoggedIn.h">
+    <ClInclude Include="LoggedInMenu.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="AccountsMenu.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
