--- a/Messages.vcxproj
+++ b/Messages.vcxproj
@@ -153,9 +153,10 @@
   <ItemGroup>
     <ClCompile Include="Account.cpp" />
     <ClCompile Include="AccountManager.cpp" />
+    <ClCompile Include="AccountsMenu.cpp" />
     <ClCompile Include="ConsoleInput.cpp" />
     <ClCompile Include="ConsoleUI.cpp" />
-    <ClCompile Include="LoggedIn.cpp" />
+    <ClCompile Include="LoggedInMenu.cpp" />
     <ClCompile Include="MainMenu.cpp" />
     <ClCompile Include="Messages.cpp" />
     <ClCompile Include="TextMessage.cpp" />
@@ -163,12 +164,13 @@
   <ItemGroup>
     <ClInclude Include="Account.h" />
     <ClInclude Include="AccountManager.h" />
+    <ClInclude Include="AccountsMenu.h" />
     <ClInclude Include="BaseApplicationState.h" />
     <ClInclude Include="BaseInput.h" />
     <ClInclude Include="BaseUI.h" />
     <ClInclude Include="ConsoleInput.h" />
     <ClInclude Include="ConsoleUI.h" />
-    <ClInclude Include="LoggedIn.h" />
+    <ClInclude Include="LoggedInMenu.h" />
     <ClInclude Include="MainMenu.h" />
     <ClInclude Include="TextMessage.h" />
   </ItemGroup>
